--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 body {
-    font-family: Arial,
-    sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color:
-    #f4f4f4;
+    background-color: #f4f4f4;
     color: #333;
 }
 
 header {
+  background-image: url('sude/gallery1.jpg');
+
+background-size: cover;
+
+background-position: center;
     background-color: #d50000;
-    color: black;
+    color: white;
     padding: 20px;
     text-align: center;
 }
@@ -26,7 +29,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-weight: bold;
 }
@@ -34,7 +37,7 @@ nav ul li a {
 section {
     padding: 30px;
     margin: 20px auto;
-    background-color: black;
+    background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
@@ -48,7 +51,7 @@ footer {
     text-align: center;
     padding: 15px 0;
     background-color: #d50000;
-    color: black;
+    color: white;
     position: relative;
     bottom: 0;
     width: 100%;
@@ -73,7 +76,7 @@ form input[type="email"] {
 
 form input[type="submit"] {
     background-color: #d50000;
-    color: black;
+    color: white;
     border: none;
     padding: 10px;
     border-radius: 4px;
